# botpokemon

./: .env.example  .gitignore  README.md  docker-compose.yml  instrucciones.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  worker.py
backend/app/api/: admin.py  main.py  routes.py  schemas.py
backend/app/matching/: matcher.py  normalizer.py
backend/app/models/: __init__.py  catalog.py  ops.py  preorders.py  pricing.py
backend/app/scraping/: base.py  config_loader.py  html_scraper.py  keywords.py  price_parser.py  runner.py  shopify.py  woocommerce.py
backend/app/services/: alerts.py  deals.py
backend/app/telegram/: bot.py  notifier.py
backend/pokeprecio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/stores/: afkstore.yaml  arcadiacollects.yaml  colectorcenter.yaml  ejemplo-html.yaml.disabled  gamingplace.yaml  huntercardtcg.yaml  oasisgames.yaml
backend/tests/: conftest.py  test_alerts_dedup.py  test_matcher.py  test_normalizer.py  test_price_parser.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/preventas/: page.tsx
frontend/src/app/producto/[id]/: page.tsx
frontend/src/app/productos/: page.tsx
frontend/src/components/: DealCard.tsx  PriceChart.tsx
frontend/src/lib/: api.ts
